random note position

--- a/src/Components/Sass/Note.module.scss
+++ b/src/Components/Sass/Note.module.scss
@@ -2,6 +2,7 @@
 @import './cursor.module';
 
 .note {
+    position: absolute;
     background-color: $yellow;
     width: 200px;
     height: 200px;
